vlib/v/checker/tests/enum_init_err.out
vlib/v/checker/tests/enum_init_err.vv:8:7: error: cannot initialize enums
    6 |
    7 | fn main() {
    8 |     a := Hello{}
      |          ~~~~~~~
    9 |     println(a)
   10 | }
