vlib/v/checker/tests/enum_init_err.vv
enum Hello {
	aaa
	bbb
	ccc
}

fn main() {
	a := Hello{}
	println(a)
}
